@@ -1,4 +1,6 @@
 * Dependencies: use the latest YML, 2.7.6.
+* Fix https://gitea.pep.foundation/pEp.foundation/pEpEngine/issues/168 , cleanly.
+  Remove the temporary kludge hiding the known violated requirement.
 
 v3.3.0-RC3  2023-05-22
 * fix NEWS.
